# ridgeback_desktop

ridgeback_desktop/: CHANGELOG.rst  package.xml
ridgeback_viz/: CHANGELOG.rst  package.xml
ridgeback_viz/launch/: view_model.launch
